unit test gRPC
