# gapi/server.go
@@ -5,27 +5,30 @@ import (
 	"github.com/phongnd2802/simple-bank/pb"
 	"github.com/phongnd2802/simple-bank/token"
 	"github.com/phongnd2802/simple-bank/util"
+	"github.com/phongnd2802/simple-bank/worker"
 )
 
 // Server serves gRPC requests for our banking service.
 type Server struct {
 	pb.UnimplementedSimpleBankServer
-	config     util.Config
-	store      db.Store
-	tokenMaker token.Maker
+	config          util.Config
+	store           db.Store
+	tokenMaker      token.Maker
+	taskDistributor worker.TaskDistributor
 }
 
 // NewServer creates a new gRPC server.
-func NewServer(config util.Config, store db.Store) (*Server, error) {
+func NewServer(config util.Config, store db.Store, taskDistributor worker.TaskDistributor) (*Server, error) {
 	tokenMaker, err := token.NewJWTMaker(config.Token.Secret)
 	if err != nil {
 		return nil, err
 	}
 
 	server := &Server{
-		config: config,
-		store: store,
+		config:     config,
+		store:      store,
 		tokenMaker: tokenMaker,
+		taskDistributor: taskDistributor,
 	}
 
 	return server, nil
